Fix property editor overflowing

--- a/ui/configurator.reel/property-explorer.reel/property-editor.reel/property-editor.css
+++ b/ui/configurator.reel/property-explorer.reel/property-editor.reel/property-editor.css
@@ -45,6 +45,7 @@
 
 .PropertyEditor-inspector {
     flex: 1;
+    overflow: hidden;
 }
 
 /* Property ---------------------- */
